# github-webhook-watcher

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py  startwatcher.sh  stopwatcher.sh
.cursor/rules/: python-guidelines.mdc
intra_deploy/: __init__.py  main.py
templates/: net.appenzeller.webhookclient.plist
tests/: __init__.py  test_basic.py  test_deploy.py  test_polling.py  test_svix.py  test_webhook.py
webhookclient/: __init__.py  main.py
