[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webhookclient"
version = "0.1.0"
authors = [
  { name = "Guido Appenzeller" },
]
description = "Local python script that watches the Webhooks sent by a GitHub repo, using Svix"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "svix",
    "aiohttp",
    "pytest-asyncio>=0.25.3",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

